--- a/index.html
+++ b/index.html
@@ -11,32 +11,26 @@
 
     <div class="app">
         <header class="header">
-            <div class="nav-left">
-                <button class="icon-btn">☰</button>
-            </div>
+            <div class="nav-left"><button class="icon-btn">☰</button></div>
             <div class="nav-center">
                 <h1>Harsh GPT</h1>
                 <p class="subtitle">Built by Harsh</p>
             </div>
-            <div class="nav-right">
-                <button class="icon-btn">👤</button>
-            </div>
+            <div class="nav-right"><button class="icon-btn">👤</button></div>
         </header>
 
         <main class="chat-container" id="chatContainer">
-            <div class="message bot">
-                Hello 👋 I’m Harsh GPT. How can I help you today?
-            </div>
+            <div class="message bot">Hello 👋 I’m Harsh GPT. How can I help you today?</div>
         </main>
 
         <footer class="input-area">
             <div class="input-wrapper">
-                <input 
-                    type="text" 
-                    id="userInput" 
-                    placeholder="Ask something..." 
-                    autocomplete="off"
-                >
+                <label for="imageInput" class="action-btn">➕</label>
+                <input type="file" id="imageInput" accept="image/*" style="display:none">
+                
+                <input type="text" id="userInput" placeholder="Ask something..." autocomplete="off">
+                
+                <button id="voiceBtn" class="action-btn">🎤</button>
                 <button id="sendBtn">Send</button>
             </div>
         </footer>
