--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
 
     <div class="app">
         <header class="header">
-            <div class="nav-left"><button class="icon-btn">☰</button></div>
+            <div class="nav-left">
+                <button class="icon-btn" id="menuBtn">☰</button>
+            </div>
             <div class="nav-center">
                 <h1>Harsh GPT</h1>
                 <p class="subtitle">Built by Harsh</p>
             </div>
-            <div class="nav-right"><button class="icon-btn">👤</button></div>
+            <div class="nav-right">
+                <button id="loginBtn" class="auth-btn">Login</button>
+                <button id="accountBtn" class="icon-btn" style="display:none">👤</button>
+            </div>
         </header>
 
         <main class="chat-container" id="chatContainer">
-            <div class="message bot">Hello 👋 I’m Harsh GPT. How can I help you today?</div>
+            <div class="message bot">Hello 👋 I’m Harsh GPT. Please login to enable permanent memory!</div>
         </main>
 
         <footer class="input-area">
