Finalized Privacy Policy and fixed Send button alignment

--- a/index.html
+++ b/index.html
@@ -54,10 +54,52 @@
                 </select>
             </div>
 
-            <div class="setting-group footer-links">
-                <p>Safety & Privacy Policy</p>
-                <a href="mailto:harsh@example.com?subject=HarshGPT Help">Help: Contact Developer</a>
-            </div>
+            <div class="setting-group">
+    <label>Safety & Privacy Policy</label>
+    <div class="privacy-box">
+        <h3>Harsh GPT – Safety & Privacy Policy</h3>
+        <p><strong>Last Updated:</strong> February 2026</p>
+        
+        <p>Welcome to Harsh GPT. Your safety, privacy, and trust are our highest priorities. This policy explains how we handle your information.</p>
+        
+        <hr>
+
+        <h4>1. Our Commitment</h4>
+        <p>Harsh GPT is designed with a privacy-first approach. We do not sell, rent, or trade user data.</p>
+
+        <h4>2. Information We Collect</h4>
+        <ul>
+            <li>Basic account info through Google Auth.</li>
+            <li>Messages and interactions (for memory features).</li>
+            <li>App performance data.</li>
+        </ul>
+
+        <h4>3. Secure Login</h4>
+        <p>Your password is never stored by us; Google handles all authentication securely.</p>
+
+        <h4>4. Chat Storage & Memory</h4>
+        <p>History is stored privately and securely via Supabase. No other user can access your data.</p>
+
+        <h4>5. Data Usage</h4>
+        <p>We do not use your data to train external AI models.</p>
+
+        <h4>6. Data Security</h4>
+        <p>Strong encryption and secure cloud infrastructure (Google Cloud & Supabase) protect your information.</p>
+
+        <h4>7. Data Sharing</h4>
+        <p>Your data is never shared for advertising resale.</p>
+
+        <h4>8. User Rights</h4>
+        <p>You remain the owner of your data and can stop using the service at any time.</p>
+
+        <h4>9. Safety & Responsible Use</h4>
+        <p>The app must not be used for illegal or harmful activities.</p>
+
+        <hr>
+        <p class="harsh-note">"Trust is the foundation of every strong system. Without trust, even the most powerful technology has no value." <br><strong>— Harsh (Developer)</strong></p>
+    </div>
+    <a href="mailto:harsh@example.com?subject=HarshGPT Help" class="help-link">Help: Contact Developer</a>
+</div>
         </div>
     </div>
 
