--- a/index.html
+++ b/index.html
@@ -123,14 +123,27 @@
         </main>
 
         <footer class="input-area">
-            <div class="input-wrapper">
-                <label for="imageInput" class="action-btn">➕</label>
-                <input type="file" id="imageInput" accept="image/*" style="display:none">
-                <input type="text" id="userInput" placeholder="Ask something..." autocomplete="off">
-                <button id="voiceBtn" class="action-btn">🎤</button>
-                <button id="sendBtn">Send</button>
-            </div>
-        </footer>
+    <div id="imagePreviewBox" style="display: none; padding: 10px; background: rgba(255, 255, 255, 0.05); border-bottom: 1px solid #444; align-items: center; gap: 12px; border-radius: 12px 12px 0 0;">
+        <div style="position: relative;">
+            <img id="previewImg" src="" style="width: 45px; height: 45px; object-fit: cover; border-radius: 8px; border: 1.5px solid #ff4b2b;">
+            <button id="cancelImg" type="button" style="position: absolute; top: -8px; right: -8px; background: #ff4b2b; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; font-size: 14px; font-weight: bold; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 5px rgba(0,0,0,0.3);">×</button>
+        </div>
+        <div style="display: flex; flex-direction: column; overflow: hidden;">
+            <span id="fileName" style="font-size: 12px; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 150px;"></span>
+            <span style="font-size: 10px; color: #aaa;">Ready for analysis...</span>
+        </div>
+    </div>
+
+    <div class="input-wrapper">
+        <label for="imageInput" class="action-btn" style="cursor: pointer; display: flex; align-items: center; justify-content: center;">➕</label>
+        <input type="file" id="imageInput" accept="image/*" style="display:none">
+        
+        <input type="text" id="userInput" placeholder="Ask something..." autocomplete="off">
+        
+        <button id="voiceBtn" class="action-btn">🎤</button>
+        <button id="sendBtn">Send</button>
+    </div>
+</footer>
     </div>
 
     <script src="script.js"></script>
