--- a/index.html
+++ b/index.html
@@ -123,17 +123,16 @@
         </main>
 
         <footer class="input-area">
-    <div id="imagePreviewBox" style="display: none; padding: 10px; background: rgba(255, 255, 255, 0.05); border-bottom: 1px solid #444; align-items: center; gap: 12px; border-radius: 12px 12px 0 0;">
-        <div style="position: relative;">
-            <img id="previewImg" src="" style="width: 45px; height: 45px; object-fit: cover; border-radius: 8px; border: 1.5px solid #ff4b2b;">
-            <button id="cancelImg" type="button" style="position: absolute; top: -8px; right: -8px; background: #ff4b2b; color: white; border: none; border-radius: 50%; width: 20px; height: 20px; cursor: pointer; font-size: 14px; font-weight: bold; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 5px rgba(0,0,0,0.3);">×</button>
-        </div>
-        <div style="display: flex; flex-direction: column; overflow: hidden;">
-            <span id="fileName" style="font-size: 12px; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 150px;"></span>
-            <span style="font-size: 10px; color: #aaa;">Ready for analysis...</span>
-        </div>
+    <div id="imagePreviewBox" style="display: none; padding: 12px; background: rgba(40, 40, 40, 0.95); border-bottom: 1px solid #444; align-items: center; gap: 12px; border-radius: 12px 12px 0 0; backdrop-filter: blur(10px);">
+    <div style="position: relative; flex-shrink: 0;">
+        <img id="previewImg" src="" style="width: 50px; height: 50px; object-fit: cover; border-radius: 8px; border: 2px solid #ff4b2b; display: block;">
+        <button id="cancelImg" type="button" style="position: absolute; top: -10px; right: -10px; background: #ff4b2b; color: white; border: none; border-radius: 50%; width: 22px; height: 22px; cursor: pointer; font-size: 14px; font-weight: bold; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 8px rgba(0,0,0,0.5); z-index: 10;">×</button>
     </div>
-
+    <div style="display: flex; flex-direction: column; overflow: hidden; justify-content: center;">
+        <span id="fileName" style="font-size: 13px; font-weight: 600; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 180px;"></span>
+        <span style="font-size: 11px; color: #00ff88; font-weight: 500;">Ready for roasting... 🔥</span>
+    </div>
+</div>
     <div class="input-wrapper">
         <label for="imageInput" class="action-btn" style="cursor: pointer; display: flex; align-items: center; justify-content: center;">➕</label>
         <input type="file" id="imageInput" accept="image/*" style="display:none">
