--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p class="harsh-note">"Trust is the foundation of every strong system."<br><strong>— Harsh</strong></p>
                 </div>
                 
-                <button class="kill-switch-btn" onclick="handleKillSwitch()" style="width: 100%; padding: 12px; background: #ff4b2b; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 15px; box-shadow: 0 4px 15px rgba(255, 75, 43, 0.3);">
+                <button class="kill-switch-btn" onclick="handleKillSwitch()" style="width: 100%; padding: 12px; background: #ff4b2b; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 15px;">
                     🔥 KILL SWITCH: Erase My Data
                 </button>
                 
@@ -96,7 +96,7 @@
             <div id="imagePreviewBox" style="display: none; padding: 12px; background: rgba(40, 40, 40, 0.95); border-bottom: 1px solid #444; align-items: center; gap: 12px; border-radius: 12px 12px 0 0; backdrop-filter: blur(10px);">
                 <div style="position: relative; flex-shrink: 0;">
                     <img id="previewImg" src="" style="width: 50px; height: 50px; object-fit: cover; border-radius: 8px; border: 2px solid #ff4b2b;">
-                    <button id="cancelImg" type="button" style="position: absolute; top: -10px; right: -10px; background: #ff4b2b; color: white; border: none; border-radius: 50%; width: 22px; height: 22px; cursor: pointer;">×</button>
+                    <button id="cancelImg" type="button" style="position: absolute; top: -10px; right: -10px; background: #ff4b2b; color: white; border: none; border-radius: 50%; width: 22px; height: 22px; cursor: pointer;">✕</button>
                 </div>
                 <div style="display: flex; flex-direction: column; overflow: hidden;">
                     <span id="fileName" style="font-size: 13px; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 150px;"></span>
