Integrated Gmail API - Harsh GPT now has eyes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
             </div>
         </footer>
     </div>
+<script src="harsh-gmail.js" defer></script>
 
-    <script src="script.js"></script>
+<script src="script.js" defer></script>
+
+<button onclick="triggerHarshInbox()" id="floating-gmail-btn">📧</button>
+
 </body>
 </html>
