--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
 
 <script src="script.js" defer></script>
 
-<button onclick="triggerHarshInbox()" id="floating-gmail-btn">📧</button>
+<div id="sidebar" class="sidebar">
+    <div class="menu-item" onclick="triggerHarshInbox()">
+        <span>📧</span> Scan My Inbox
+    </div>
+</div>
 
 </body>
 </html>
